2002-06-20  Richard Williamson (local)  <rjw@apple.com>

	* WebCoreSupport.subproj/IFImageRenderer.m:
	(-[IFImageRenderer frameDuration]):
	    Added minimum 1/60th second duration per frame.
	* WebView.subproj/IFDynamicScrollBarsView.m:
	(-[IFDynamicScrollBarsView updateScrollers]):
	    Only display scrollview if scrollers changed.
	* WebView.subproj/IFWebFramePrivate.mm:
	(-[IFWebFrame _setState:]):
	    Explicity turn on copiesOnScroll.  This may cause problems w/
	    plugins.  Need to verify once plugins are no longer crashing.

2002-06-20  Darin Adler  <darin@apple.com>

	Fix for leak where sub-frame IFHTMLViews would not call _stopPlugins.

	* Plugins.subproj/IFPluginView.mm:
	(-[IFPluginView viewWillMoveToWindow:]):
	* WebView.subproj/IFHTMLView.mm:
	(-[IFHTMLView viewWillMoveToWindow:]):
	Use this viewWillMoveToWindow instead of removeFromSuperview; it's a more
	reliable way to handle cases where the view is removed from the view hierarchy.

	Fix for IFWebFrame -> IFWebDataSource -> LoadProgressMonitor -> IFWebFrame
	reference cycle.

	* WebView.subproj/IFLocationChangeHandler.h: Add dataSource parameters for the
	methods that don't have them so this can be "delegate" style.
	* WebView.subproj/IFWebController.h: Pass a dataSource instead of a frame
	when asking for a location change handler.

	* WebView.subproj/IFMainURLHandleClient.mm:
	(-[IFMainURLHandleClient IFURLHandle:resourceDataDidBecomeAvailable:]):
	Pass dataSource for locationChangeDone.

	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSource _startLoading:]):
	Pass dataSource for locationChangeStarted.

	* WebView.subproj/IFWebFrame.mm: (-[IFWebFrame setProvisionalDataSource:]):
	Pass a dataSource instead of a frame when asking for a location change handler.

	* WebView.subproj/IFWebFramePrivate.mm:
	(-[IFWebFrame _transitionProvisionalToCommitted]): Pass dataSource for
	locationChangeCommitted.
	(-[IFWebFrame _isLoadComplete]): Pass dataSource for locationChangeDone.
